syntax = "proto3";

option csharp_namespace = "Api";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package product;

enum ProductType {
  GENERAL = 0;
  HOUSEHOLD_CHEMICALS = 1;
  TECHNOLOGY = 3;
  FOODS = 4;
}

service ProductService {
  rpc Create (CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/product/create"
    };
  };

  rpc Get (GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/product/get"
    };
  };

  rpc UpdatePrice (UpdatePriceRequest) returns (UpdatePriceResponse) {
    option (google.api.http) = {
      get: "/product/updatePrice"
    };
  };

  rpc List (ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {
      get: "/product/list"
    };
  };
}


message Date {
  int32 day = 1;
  int32 month = 2;
  int32 year = 3;
}

message Product {
  int32 product_id = 1;
  string name = 2;
  int32 price = 3;
  int32 weight = 4;
  ProductType product_type = 5;
  Date creation_date = 6;
  int32 warehouse_id = 7;
}

message CreateProductRequest {
  string name = 1;
  int32 price = 2;
  int32 weight = 3;
  ProductType type = 4;
  int32 warehouse_id = 5;
}

message CreateProductResponse {
  int32 product_id = 1;
}

message GetProductRequest {
  int32 product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdatePriceRequest {
  int32 product_id = 1;
  int32 new_price = 2;
}

message UpdatePriceResponse {
  int32 old_price = 1;
}

message ListProductsRequest {
  Pagination pagination = 1;
  Filter filter = 2;
  
  message Pagination {
    int32 page_number = 1;
    int32 page_size = 2;
  }
  
  message Filter {
    Date start_date = 1;
    ProductType product_type = 2;
      int32 warehouse_id = 3;
    }
}

message ListProductsResponse {
  repeated Product products = 1;
}

message ErrorMessage {
  string error = 1;
}